Finished refactoring the way references are handled and getting rid of indirections from non-indirect buckets.
Former-commit-id: c625a72b2df15dd40709c456aaf3f9b42f69d0b7